--- a/README.org
+++ b/README.org
@@ -1,12 +1,10 @@
 #+TITLE: remind-bindings.el
 
-** Motivation and Description
-
  It is sometimes hard to remember what bindings you have set without having to open up your emacs *init* file and checking yourself. 
 
  This package parses your Emacs init file for `use-package` or `global-set-key` calls and summarises the bindings it detects on a package-by-package basis. 
 
- When emacs is idle, a message is printed in the minibuffer utilising the same framework as [`omni-quotes.el`](https://github.com/AdrieanKhisbe/omni-quotes.el).
+ When emacs is idle, a message is printed in the minibuffer utilising the same framework as [[https://github.com/AdrieanKhisbe/omni-quotes.el][`omni-quotes.el`]].
 
 ** Installation
 
