--- a/README.org
+++ b/README.org
@@ -7,16 +7,17 @@
 
  This package parses your Emacs init file for =use-package= or =global-set-key= calls and summarises the bindings it detects on a package-by-package basis.
 
- When emacs is idle, a message is printed in the minibuffer utilising the same framework as [[https://github.com/AdrieanKhisbe/omni-quotes.el][omni-quotes.el]].
+ When the show-when-idle setting is true, a message is printed in the minibuffer utilising the same framework as [[https://github.com/AdrieanKhisbe/omni-quotes.el][omni-quotes.el]].
+
+ Otherwise the bindings can be toggled in a sidebar.
 
 ** Installation
 
    #+begin_src elisp
      (use-package remind-bindings
-       :hook
-       (after-init . remind-bindings-initialise)
-       :custom
-       (remind-bindings-initfile (expand-file-name "~/.emacs.d/init.el")))
+       :hook (after-init . remind-bindings-initialise)
+       :custom (remind-bindings-initfile (expand-file-name "~/.emacs.d/init.el"))
+       :bind (("C-c C-d" . 'remind-bindings-toggle-buffer)))
    #+end_src
 
 ** Customization
